Add .md for subj0108 (centered columns)

--- a/res_MuSu/[NA,c,NA]/MSC_0108/MuSu_(NA, c, NA)_subj0108.Rmd
+++ b/res_MuSu/[NA,c,NA]/MSC_0108/MuSu_(NA, c, NA)_subj0108.Rmd
@@ -21,7 +21,7 @@ suppressMessages(library(ggplotify))
 suppressMessages(library(grid))
 suppressMessages(library(pals))
 # Read functions -----------------------------------
-tool.path <- "../tools/"
+tool.path <- "../../../tools/"
 # SScomm.R: the function that compute sums of squares of a square matrix according to a design matrix
 source(paste0(tool.path,"SScomm.R"))
 source(paste0(tool.path,"vec2sqmat.R"))
@@ -37,8 +37,7 @@ The data are from the morning scan club (MSC) resting-state data where the 2 par
 ```{r community_list, echo = FALSE, fig.height= 10, fig.width = 2}
 # rename communities
 #--- read the file with community information: label number & community name & color & abbreviation for community name
-parcel.comm.path <- "data/parcel_community"
-CommName <- read.csv("../data/parcel_community/systemlabel.txt",header = FALSE)
+CommName <- read.csv("../../../data/parcel_community/systemlabel.txt",header = FALSE)
 colnames(CommName) <- c("Comm", "CommLabel","CommColor","CommLabel.short")
 CommName[,'Community'] <- c("UnAssign", "Default","lateral Visual","Frontoparietal",
                             "medial Visual","dorsal Attention","Premotor",
@@ -52,7 +51,7 @@ pander::pander(CommName[,c("Comm", "Community","CommLabel.short")])
 
 ```{r data_info}
 # read parcel labels for each subject
-parcel.comm.path <- "../data/parcel_community"
+parcel.comm.path <- "../../../data/parcel_community"
 parcelfile2read <- c("/sub-MSC01_node_parcel_comm.txt","/sub-MSC08_node_parcel_comm.txt")
 subj.name <- c("sub01","sub08")
 parcel.list <- lapply(1:length(parcelfile2read), function(x){
@@ -72,7 +71,7 @@ As a result, the correlation matrix of each session of each subject will look li
 
 ```{r data, echo = FALSE, include = FALSE, fig.show='hide'}
 # read examplar data
-zmat.path <- "../data/zmat"
+zmat.path <- "../../../data/zmat"
 subj.num <- c("01","08")
 #--- plot heatmap
 for(subj.count in 1:length(parcel.list)){
@@ -150,9 +149,10 @@ _Note: The data was transformed from the upper triangle of the correlation matri
 ```{r grandtable}
 # > Read grand table of subject 1 --------------------
 ## grand table and the labels for each intersection of the correlation matirx
-load(paste0("../data/grandatble_and_labels_MSC01_MSC08_20190312.Rdata")) # read the labels of grandtable
+load(paste0("../../../data/grandatble_and_labels_MSC01_MSC08_20190312.Rdata")) # read the labels of grandtable
 # gt: grand tabls
 # labels: information for each edge in the rectangular grand table
+# subjects_label in labels go in order
 
 ## Categorize columns by between or within edges
 #--- Create new column of sub-edgetype
@@ -413,7 +413,7 @@ We can also show the factor scores for network edges as square matrix of sub01 (
 
 ```{r squaremat_fi, echo=F, fig.show = 'hide'}
 fi1_s1_sqmat <- vec2sqmat(svd.res$ExPosition.Data$fi[gtlabel$subjects_label=="sub01",1])
-fi1_s2_sqmat <- vec2sqmat(svd.res$ExPosition.Data$fi[gtlabel$subjects_label=="sub08",1])
+fi1_s8_sqmat <- vec2sqmat(svd.res$ExPosition.Data$fi[gtlabel$subjects_label=="sub02",1])
 
 heats1 <- superheat(fi1_s1_sqmat, y.axis.reverse = T,
                     membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
@@ -462,7 +462,7 @@ Factor score in squarem matrix that have significant contribution only
 fi_sig <- svd.res$ExPosition.Data$fi
 fi_sig[!importantEdg1] <- 0
 fi_sub1_sig_sqmat <- vec2sqmat(fi_sig[gtlabel$subjects_label=="sub01",1])
-fi_sub8_sig_sqmat <- vec2sqmat(fi_sig[gtlabel$subjects_label=="sub08",1])
+fi_sub8_sig_sqmat <- vec2sqmat(fi_sig[gtlabel$subjects_label=="sub02",1])
 
 heat_sigfi_sub1 <- superheat(fi_sub1_sig_sqmat, y.axis.reverse = T,
                              membership.rows =parcel.list$sub01$vox.des$Comm.rcd,
